--- a/style.css
+++ b/style.css
@@ -70,3 +70,37 @@ body{
     letter-spacing: 0.25rem;
     line-height: 1.5rem;
 }
+
+.segunda-secao{
+    background-color: #00001A;
+    margin-bottom: 4rem;
+    padding: 1.5rem 1.1rem;
+}
+
+.mbp {
+    border-bottom: 1px solid#5E607A;
+    margin-bottom: 1.75rem;
+    padding-bottom: 1.75rem;
+}
+
+
+.segunda-secao h2 {
+    color: #E9AA52;
+    font-size: 2rem;
+    line-height: 100%;
+    margin-bottom: 2.2rem;
+}
+
+.segunda-secao h3 {
+    color: #FFFDFA;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 0.5rem;
+}
+
+.segunda-secao p {
+    color: #C5C6CE;
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+}
