--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    padding: 1.75rem 1.75rem;
+    padding: 1.75rem 1rem;
     background-color: var(--almost-white);
 }
 
@@ -100,4 +100,36 @@ body {
     color: #C5C6CE;
     font-size: 0.9375rem;
     line-height: 1.625rem;
+}
+
+.terceira-secao > div {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.terceira-secao img {
+    max-width: 6.25rem;
+
+}
+
+.terceira-secao strong {
+    color: #C5C6CE;
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.terceira-secao h2 {
+    color: #00001A;
+    font-size: 1.125rem;
+    font-weight: 800;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+}
+
+.terceira-secao p {
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    color: #5E607A;    
 }
