--- a/style.css
+++ b/style.css
@@ -31,20 +31,20 @@ body.escurecer::before {
     left: 0;
 }
 
-.header-mobile {
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
 }
 
-.header-mobile button {
+header button {
     border: none;
     background: none;
     width: fit-content;
 }
 
-.header-mobile nav {
+header nav.mobile {
     position: fixed;
     background-color: #FFFDFA;
     right: -16rem;
@@ -61,16 +61,16 @@ body.escurecer::before {
     transition: 0.7s;
 }
 
-.header-mobile nav.abrir {
+header nav.mobile.abrir {
     right: 0;
 }
 
-.header-mobile nav button {
+header nav button {
     align-self: flex-end;
     margin-bottom: 4rem;
 }
 
-.header-mobile nav a {
+header .mobile a {
     text-decoration: none;
     color: #00001A;
     font-size: 1.125rem;
@@ -176,4 +176,22 @@ body.escurecer::before {
     font-size: 0.9375rem;
     line-height: 1.625rem;
     color: #5E607A;
+}
+
+@media(min-width: 1110px) {
+    header > button {
+        display: none;
+    }
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: #5E607A;
+    }
 }
