--- a/style.css
+++ b/style.css
@@ -33,9 +33,12 @@ body.escurecer::before {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     align-items: center;
     margin-bottom: 2rem;
+
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
 header button {
@@ -75,6 +78,15 @@ header .mobile a {
     color: #00001A;
     font-size: 1.125rem;
     line-height: 1.5rem;
+}
+
+header .desktop{
+    display: none;
+}
+
+main {
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
 .primeira-secao {
@@ -179,6 +191,38 @@ header .mobile a {
 }
 
 @media(min-width: 1110px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1.75rem;
+    }
+
+    .primeira-secao {
+        grid-column: 1 / 3;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.75rem;
+    }
+ 
+    .primeira-secao picture {
+        grid-column: 1 / 3;
+
+    }
+
+    .primeira-secao img {
+        margin: 0;
+
+    }
+
+    .primeira-secao h1 {
+        font-size: 3.5rem;
+    }
+
+    .segunda-secao h2 {
+       font-size: 2.5rem; 
+    }
+    
     header > button {
         display: none;
     }
