--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header button {
     border: none;
     background: none;
     width: fit-content;
+    cursor: pointer;
 }
 
 header nav.mobile {
@@ -184,6 +185,11 @@ main {
     margin-block: 0.6rem;
 }
 
+.terceira-secao a {
+    text-decoration: none;
+
+}
+
 .terceira-secao p {
     font-size: 0.9375rem;
     line-height: 1.625rem;
@@ -191,6 +197,27 @@ main {
 }
 
 @media(min-width: 1110px) {
+ 
+    header > button {
+        display: none;
+    }
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: #5E607A;
+    }
+
+    header .desktop a:hover {
+        color: #F15D51;
+    }
+
     main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -219,23 +246,22 @@ main {
         font-size: 3.5rem;
     }
 
+    .primeira-secao button:hover {
+        background-color: #00001A;
+        cursor: pointer;
+    }
+
     .segunda-secao h2 {
        font-size: 2.5rem; 
     }
-    
-    header > button {
-        display: none;
-    }
 
-    header .desktop {
+    .terceira-secao {
         display: flex;
-        gap: 2.5rem;
+        grid-column: 1 / 4;
     }
 
-    header .desktop a {
-        font-size: 0.9375rem;
-        line-height: 1.625rem;
-        text-decoration: none;
-        color: #5E607A;
+    .terceira-secao h2:hover {
+        color: #F15D51;
     }
+
 }
